# KisanEnv

./: .gitignore  BLOG.md  Dockerfile  README.md  docker-compose.yml  download_wandb_data.py  dynamics.py  env.py  episode_tracker.py  grader.py  inference.py  openenv.yaml  pyproject.toml  qwen_training_metrics.csv  requirements.txt  run.py  tasks.py  test_endpoints.py  test_learning.py
agents/: climate_agent.py  district_farm_advisor.py  farmer_agent.py  market_agent.py
training/: heuristic_baseline.py  plot_rewards.py  prepare_dataset.py  run_300_episodes.py  train_grpo.py
ui/: dashboard.js  index.html  simulation.js  styles.css
