[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kisanenv"
version = "2.0.0"
description = "Multi-agent agricultural RL environment for Indian smallholder farming"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

keywords = [
  "reinforcement-learning",
  "agriculture",
  "multi-agent",
  "llm-training",
  "openenv",
  "india"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "openenv>=0.1.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "numpy>=1.26.0",
  "trl>=0.8.6",
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "datasets>=2.19.0",
  "accelerate>=0.29.0",
  "unsloth>=2024.4",
  "scipy>=1.13.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
]
ui = [
  "jinja2>=3.1.0",
  "aiofiles>=23.2.0",
]

[project.scripts]
kisanenv-server = "run:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
